@@ -1,5 +1,6 @@
   * Removed useless "antialiasing" option on startup dialog
   * Startup dialog will remember your previously-chosen options
+  * Water rendering can be toggled with "T"
 
 Minecraft X-Ray 2.7 Maintenance Branch 7 (2011.01.21)
 
